# sample_axum_oidc

./: Cargo.toml  README.md  localhost.crt  localhost.pem
src/: main.rs  oidc_util.rs  web_error.rs
