[package]
name = "test-openidconnect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-cookies = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1"
axum-server = { version = "0.3", features = ["tls-rustls"] } 
magic-crypt = "3"
openidconnect = "2"
oauth2="4"
dotenv = "0.15"
